# bazel-central-registry

./: .gitignore  .mergify.yml  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
.github/workflows/: add_hex_package.yml  check.yml  verify_source_urls.yml
erlang_tools/: WORKSPACE.tpl  add_hex_module.sh  gen_build_file.py  hex_metadata_to_json
modules/accept/: metadata.json
modules/accept/0.3.5/: MODULE.bazel  presubmit.yml  source.json
modules/aten/: metadata.json
modules/aten/0.5.8/: MODULE.bazel  presubmit.yml  source.json
modules/base64url/: metadata.json
modules/base64url/1.0.1/: MODULE.bazel  presubmit.yml  source.json
modules/com_github_rabbitmq_looking_glass/: metadata.json
modules/com_github_rabbitmq_looking_glass/0.2.2/: source.json
modules/cowlib/: metadata.json
modules/cowlib/2.9.1/: MODULE.bazel  presubmit.yml  source.json
modules/ct_helper/: metadata.json
modules/ct_helper/2022.10.21/: MODULE.bazel  presubmit.yml  source.json
modules/gen_batch_server/: metadata.json
modules/gen_batch_server/0.8.7/: MODULE.bazel  presubmit.yml  source.json
modules/gen_batch_server/0.8.8/: MODULE.bazel  source.json
modules/host_triple/: metadata.json
modules/host_triple/0.1.0/: MODULE.bazel  presubmit.yml  source.json
modules/inet_tcp_proxy_dist/: metadata.json
modules/inet_tcp_proxy_dist/2022.10.11/: MODULE.bazel  presubmit.yml  source.json
modules/lz4-erlang/: metadata.json
modules/lz4-erlang/1.9.4.1/: source.json
modules/meck/: metadata.json
modules/meck/0.9.2/: MODULE.bazel  presubmit.yml  source.json
modules/osiris/1.6.4/: presubmit.yml
modules/proper/: metadata.json
modules/proper/1.4.0/: MODULE.bazel  presubmit.yml  source.json
modules/rabbitmq-server/: metadata.json
modules/rabbitmq-server/3.10.6/: MODULE.bazel  presubmit.yml  source.json
modules/rabbitmq_osiris/: metadata.json
modules/rabbitmq_osiris/1.6.4/: presubmit.yml  source.json
modules/rabbitmq_osiris/1.6.5/: source.json
modules/rabbitmq_osiris/1.6.6/: source.json
modules/rabbitmq_osiris/1.6.7/: source.json
modules/rabbitmq_osiris/1.6.8/: source.json
modules/rabbitmq_osiris/1.6.9/: source.json
modules/rabbitmq_osiris/1.7.0/: source.json
modules/rabbitmq_osiris/1.7.0-rc.1/: source.json
modules/rabbitmq_osiris/1.7.1/: source.json
modules/rabbitmq_osiris/1.7.2/: source.json
modules/rabbitmq_osiris/1.8.0/: source.json
modules/rabbitmq_osiris/1.8.1/: source.json
modules/rabbitmq_osiris/1.8.2/: source.json
modules/rabbitmq_ra/: metadata.json
modules/rabbitmq_ra/2.6.3/: MODULE.bazel  (+1 more)
modules/ranch/: metadata.json
modules/rules_elixir/: metadata.json
modules/rules_erlang/: metadata.json
modules/seshat/: metadata.json
tools/: verify_stable_archives.py
(+37 files in other folders)
